refactor(Application): Application 클래스 간단화 진행