@@ -24,69 +24,74 @@ public class Application {
             OutputView.printProducts(products);
             Map<String, Integer> buyingItems = InputView.readItem();
 
-            List<Order> orders = setOrders(buyingItems);
+            List<Order> orders = createOrders(buyingItems);
 
             OutputView.printReceipt(orders);
 
-            sellProduct(orders);
+            updateProductsQuantity(orders);
 
-            if (oneMore == true) {
+            if (oneMore) {
                 oneMore = InputView.readOneMore().equalsIgnoreCase("Y");
             }
         }
     }
 
-    public static List<Order> setOrders(Map<String, Integer> buyingItems) {
+    public static List<Order> createOrders(Map<String, Integer> buyingItems) {
         List<Order> orders = new ArrayList<>();
 
         for (Map.Entry<String, Integer> item : buyingItems.entrySet()) {
-            List<Product> matchProducts = products.stream().filter(p -> p.getName().equals(item.getKey())).toList();
-            if (matchProducts.isEmpty()) {
+            List<Product> matchingProducts = products.stream().filter(p -> p.getName().equals(item.getKey())).toList();
+            if (matchingProducts.isEmpty()) {
                 return null;
             }
-            if (matchProducts.size() > 1 && matchProducts.get(0).getPromotion() == null) {
+            if (matchingProducts.size() > 1 && matchingProducts.getFirst().getPromotion() == null) {
                 return null;
             }
-            Order order = setOrder(matchProducts, item.getValue());
-
-            orders.add(order);
+            orders.add(createOrder(matchingProducts, item.getValue()));
         }
 
-        if (InputView.readMembership().equalsIgnoreCase("Y")) {
-            for (Order order : orders) {
-                order.setMembership();
-            }
-        }
+        applyMembershipDiscount(orders);
         return orders;
     }
 
-    public static Order setOrder(List<Product> matchProducts, int quantity) {
-        if (matchProducts.size() == 1) {
-            Order order = new Order(matchProducts.get(0), quantity);
-            for (Product product : products) {
-                if (product.getName().equals(matchProducts.get(0).getName())) {
-                    product.sell(order.countNonePromotionQuantity());
-                }
-            }
-            return order;
+    public static Order createOrder(List<Product> matchingProducts, int quantity) {
+        if (matchingProducts.size() == 1) {
+            return createSingleOrder(matchingProducts.getFirst(), quantity);
         }
-        Order order = new Order(matchProducts.get(0), matchProducts.get(1), quantity);
+        return createPromotionOrder(matchingProducts, quantity);
+    }
+
+    private static Order createSingleOrder(Product product, int quantity) {
+        Order order = new Order(product, quantity);
+        product.sell(order.countNonePromotionQuantity());
+        return order;
+    }
+
+    private static Order createPromotionOrder(List<Product> matchingProducts, int quantity) {
+        Order order = new Order(matchingProducts.get(0), matchingProducts.get(1), quantity);
         if (order.canRecieveItem() > 0) {
-            if (InputView.readBuyMore(matchProducts.getFirst().getName(), order.canRecieveItem()).equals("N")) {
+            if (InputView.readBuyMore(matchingProducts.getFirst().getName(), order.canRecieveItem()).equals("N")) {
                 return order;
             }
             order.addQuantity(order.canRecieveItem());
         }
         if (order.cantPromotionQuantity() > 0) {
-            if (InputView.readCantPromotion(matchProducts.getFirst().getName(), order.cantPromotionQuantity()).equals("Y")) {
+            if (InputView.readCantPromotion(matchingProducts.getFirst().getName(), order.cantPromotionQuantity()).equals("Y")) {
                 return order;
             }
         }
         return order;
     }
 
-    public static void sellProduct(List<Order> orders) {
+    private static void applyMembershipDiscount(List<Order> orders) {
+        if (InputView.readMembership().equalsIgnoreCase("Y")) {
+            for (Order order : orders) {
+                order.setMembership();
+            }
+        }
+    }
 
+    public static void updateProductsQuantity(List<Order> orders) {
         for (Order order : orders) {
             int promotionQuantity = order.countPromotionQuantity();
             int nonePromotionQuantity = order.countNonePromotionQuantity();
